--- a/wearing_website/index.html
+++ b/wearing_website/index.html
@@ -107,30 +107,26 @@
 
   <main class="container">
     <div class="item">
-      <img src="" alt="ジャケット">
-      <!--<img src="https://source.unsplash.com/400x400/?jacket" alt="ジャケット">-->
       <div class="info">
         <h3>カジュアルジャケット</h3>
-        <p class="price">¥7,980</p>
-        <a href="file:///Users/murakimika/data_html/people.html" class="btn">カートに追加</a>
+        <p class="price">説明</p>
+        <a href="リンク先URL" class="btn">データを見る/a>
       </div>
     </div>
 
     <div class="item">
-      <img src="https://source.unsplash.com/400x400/?tshirt" alt="Tシャツ">
       <div class="info">
         <h3>シンプルTシャツ</h3>
-        <p class="price">¥2,500</p>
-        <a href="#" class="btn">カートに追加</a>
+        <p class="price">説明</p>
+        <a href="#" class="btn">データを見る</a>
       </div>
     </div>
 
     <div class="item">
-      <img src="https://source.unsplash.com/400x400/?dress" alt="ワンピース">
       <div class="info">
         <h3>夏のワンピース</h3>
-        <p class="price">¥5,980</p>
-        <a href="#" class="btn">カートに追加</a>
+        <p class="price">説明</p>
+        <a href="#" class="btn">データを見る</a>
       </div>
     </div>
   </main>
