--- a/wearing_website/index.html
+++ b/wearing_website/index.html
@@ -108,7 +108,7 @@
   <main class="container">
     <div class="item">
       <div class="info">
-        <h3>カジュアルジャケット</h3>
+        <h3>データ1</h3>
         <p class="price">説明</p>
         <a href="リンク先URL" class="btn">データを見る/a>
       </div>
@@ -116,7 +116,7 @@
 
     <div class="item">
       <div class="info">
-        <h3>シンプルTシャツ</h3>
+        <h3>データ2</h3>
         <p class="price">説明</p>
         <a href="#" class="btn">データを見る</a>
       </div>
@@ -124,7 +124,7 @@
 
     <div class="item">
       <div class="info">
-        <h3>夏のワンピース</h3>
+        <h3>データ3</h3>
         <p class="price">説明</p>
         <a href="#" class="btn">データを見る</a>
       </div>
